# fysik_udregninger

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yml  development.yml  package.yml  production.yml
